--- a/conf/trainer/train.yaml
+++ b/conf/trainer/train.yaml
@@ -31,10 +31,10 @@ callbacks:
 logger:
   _target_: pytorch_lightning.loggers.WandbLogger
   save_dir: ${..default_root_dir}
-  dir: ${..default_root_dir}
-  log_model: true
-  group: ${name}
-  project: ${dataset.dataset_name}-release
+  # dir: ${..default_root_dir}
+  # log_model: true
+  # group: ${name}
+  # project: ${dataset.dataset_name}-release
 
 strategy:
   _target_: pytorch_lightning.strategies.DDPStrategy
